--- a/SinatraMockServer.xctemplate/Gemfile
+++ b/SinatraMockServer.xctemplate/Gemfile
@@ -2,4 +2,21 @@ source 'https://rubygems.org'
 gem 'rake'
 gem 'restkit', :git => 'git://github.com/RestKit/RestKit-Gem.git'
 gem 'sinatra'
+gem 'sinatra-contrib'
+gem 'json'
 gem 'thin', '~> 1.3.1'
+gem 'data_mapper'
+gem 'rabl'
+gem 'haml'
+gem 'rack-contrib'
+gem 'faker'
+group :development, :test do
+	gem 'dm-sqlite-adapter'	
+	gem 'guard-rspec'
+	gem 'rb-fsevent', '~>0.9.1'
+	gem 'rspec'
+	gem 'pry'
+end
+group :production do	
+	gem 'dm-postgres-adapter'
+end
