updating pod file for cocoapods 0.34.2 adding explicit source.

--- a/DeveloperTowniOS.xctemplate/TemplateInfo.plist
+++ b/DeveloperTowniOS.xctemplate/TemplateInfo.plist
@@ -32,6 +32,7 @@
 			<string>Environment Configuration</string>
 			<key>Beginning</key>
 			<string><![CDATA[
+source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, "7.0"
 
 pod "MRCEnumerable"
